gitops/apps/ntfy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: demo
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - name: http
      port: 80
      targetPort: http
